--- a/client/package.json
+++ b/client/package.json
@@ -13,18 +13,17 @@
     "bootstrap": "^4.5.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-stripe-checkout": "^2.6.3",
     "reactstrap": "^8.8.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4445 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000",
+  "proxy": "http://localhost:4444/",
   "eslintConfig": {
     "extends": [
       "react-app",
